# zkaudit

./: .gitattributes  .gitignore  README.md
contracts/attestation-registry/: Cargo.toml
contracts/attestation-registry/src/: lib.rs  test.rs
contracts/attestation-registry/test_snapshots/test/: attest_bad_journal_len_returns_error.1.json  attest_happy_path_stores_journal_v1_fields.1.json  get_attestation_unknown_hash_returns_none.1.json  is_engine_registered_reflects_register_engine.1.json  register_engine_without_admin_auth_fails.1.json
logs/: registry_id.txt
scripts/: build_guest_direct.sh  build_guest_native.sh  build_host.sh  build_methods.sh  build_methods_debug.sh  checkpoint0_setup.sh  checkpoint4_verify.sh  checkpoint5_dev.sh  checkpoint5_full.sh  checkpoint5_native.sh  checkpoint6_groth16.sh  checkpoint9_deploy.sh  debug_groth16.sh  demo_e2e.sh  docker_wsl_wrapper.sh  extract_guest_errors.sh  invoke_verify.sh  run_groth16_wsl.sh  rzup_retry.sh  rzup_status.sh  rzup_wait.sh  show_guest_error.sh  test_docker_mount.sh  test_groth16_docker.sh
scripts/cloud_proving/: README.md  bootstrap_ubuntu.sh  (+4 more)
zkvm/: Cargo.toml  journal.hex  proof.txt
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs  suite.rs
zkvm/methods/guest/: Cargo.toml  rustc-ice-2026-07-02T16_38_40-48891.txt  rustc-ice-2026-07-02T16_39_19-49157.txt  rustc-ice-2026-07-02T16_40_03-49914.txt  rustc-ice-2026-07-02T16_41_00-52260.txt  rustc-ice-2026-07-02T16_41_54-52347.txt  rustc-ice-2026-07-02T16_41_54-52348.txt  rustc-ice-2026-07-02T16_42_30-52410.txt  rustc-ice-2026-07-02T16_42_30-52411.txt
zkvm/methods/guest/src/: engine.rs  suite.rs
zkvm/methods/guest/src/targets/: vault_v1.rs  vault_v2.rs
(+1 files in other folders)
