[workspace]
members = ["."]
resolver = "2"

[package]
name = "attestation-registry"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "25.1.0"
risc0-interface = { git = "https://github.com/NethermindEth/stellar-risc0-verifier", package = "risc0-interface", rev = "e8ff6ea202db195352c0141ecc533ff649393fe4" }

[dev-dependencies]
soroban-sdk = { version = "25.1.0", features = ["testutils"] }
hex = "0.4.3"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
